<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_numberOne"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_numberTwo"
            android:inputType="textPersonName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/R1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_sumar" />

            <RadioButton
                android:id="@+id/R2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_restar" />

            <RadioButton
                android:id="@+id/R3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_multiplicar" />

            <RadioButton
                android:id="@+id/R4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_dividir" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="operar"
            android:text="@string/button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv1"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>